--- a/public/style.css
+++ b/public/style.css
@@ -17,12 +17,15 @@ h1 {
 	padding: 0;
 }
 
+button { 
+	font-family: inherit 
+}
+
 .button {
 	background-color: #F4F4F4;
 	color: #a57d37;
 	font-size: 25px;
 	font-weight: bold;
-	font-family: 'Italianno', cursive;
 	height: 40px;
 	width: 150px;
 	margin-left: 10px;
