--- a/app/src/components/register.html
+++ b/app/src/components/register.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Eternity Hash - Register</title>
-	<link rel="stylesheet" type="text/css" href="../public/authenticate.css">
+	<link rel="stylesheet" type="text/css" href="./authenticate.css">
 	<link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
 	<link rel="icon" type="image/png" sizes="16x16" href="../public/images/favicon-16x16.png">
 </head>
 <body>
 	<div class="container">
 		<div class="header">
-			<img src="../public/images/logo-192.png" width='40px' height='40px'>
+			<img src="./images/logo-192.png" width='40px' height='40px'>
 			<h2>Register</h2>
 		</div>
 		
