--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Italianno&display=swap');
 
 body {
-	background-color: #F4F4F4;
+	background-image:linear-gradient(#eee, #aaa);
 	padding: 0;
 	margin: 0;
 	font-family: 'Italianno', cursive;
