--- a/app/src/collection.css
+++ b/app/src/collection.css
@@ -59,7 +59,7 @@
   	border-left-color:#eed;
   	border-right-color:#eed;
   	border-top-color:#ccb;
-  	width: 200px;
+  	max-width: 100%;
   	height: 200px;
   	overflow: none;
 }
