--- a/app/src/collection.css
+++ b/app/src/collection.css
@@ -25,6 +25,10 @@
   	height: 59%;
 }
 
+.piece:hover {
+	cursor: pointer;
+}
+
 .piece:before {
     border-radius:2px;
     bottom:-2vmin;
@@ -61,5 +65,4 @@
   	border-top-color:#ccb;
   	max-width: 100%;
   	height: 200px;
-  	overflow: none;
 }
