added texture background to art-piece pages

--- a/app/src/collection.css
+++ b/app/src/collection.css
@@ -7,7 +7,7 @@
 }
 
 .piece {
-	background-color: #a57a374d;
+	background-color: #e0d3c3;
   	border:solid 3vmin #050a0a;
   	border-bottom-color:#050a0aab;
   	border-left-color:#050a0ab8;
