--- a/app/src/piece.css
+++ b/app/src/piece.css
@@ -1,3 +1,10 @@
+.piece-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: flex-start;
+	margin: 0 auto;
+}
 
 .carousel-container {
 	display: flex;
@@ -5,7 +12,7 @@
 	justify-content: center;
 	width: 40vw;
 	height: 40vh;
-	margin: 0 auto;
+	
 }
 
 .counter-button {
@@ -52,4 +59,11 @@
 
 .hidden {
 	visibility: hidden; ;
+}
+
+.content {
+	width: 500px;
+	height: 500px;
+	background-color: crimson;
+	color: white;
 }
