--- a/app/src/piece.css
+++ b/app/src/piece.css
@@ -1,9 +1,25 @@
-.piece-container {
+#parent-container {
+	height: 100%;
+}
+
+.checkout-container {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	align-items: flex-start;
+	height: 100%;
+	margin: 0;
+}
+
+.piece-container {
+	background-image: url('/white_wall.png');
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	align-items: center;
 	margin: 0 auto;
+	flex-grow: 1;
+	height: 100%;
 }
 
 .carousel-container {
@@ -11,8 +27,7 @@
 	flex-direction: row;
 	justify-content: center;
 	width: 40vw;
-	height: 40vh;
-	
+	height: 40vh;	
 }
 
 .counter-button {
@@ -32,6 +47,7 @@
 }
 
 .current-image {
+	box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -66,23 +82,32 @@
   	box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
   	box-sizing: border-box;
   	display:inline-block;
-  	margin: 3vh 3vw;
+  	margin: 5vh 3vw;
   	padding: 2px;
   	border: 0.7vmin ridge #b7950e;
   	border-bottom-color: #b7950fbd;
   	border-left-color: #b7950fe0;
   	border-right-color: #b7950fe0;
-	margin-left: 0;
   	position:relative;
   	text-align:center;
-  	width: 18%;
+  	width: 30%;
 }
 
-  .description {
-  	font-size: 8px;
-  }
+.description {
+	font-size: 8px;
+}
 
-  .price {
-  	font-size: 10px;
-  	font-weight: bold;
-  }
+.price {
+	font-size: 10px;
+	font-weight: bold;
+}
+
+.checkout {
+	background-color: white;
+	flex-grow: 1;
+	height: 100%;
+}
+
+
+
+
