--- a/app/src/index.css
+++ b/app/src/index.css
@@ -90,4 +90,21 @@ h1 {
 	opacity: 0.5;
 }
 
+.cart {
+	color: white;
+	margin-left: 0px;
+}
+
+.lbl-cart-count {
+    height: 20px;
+    width: 20px;
+    background-color: #3e6079;
+    color: white;
+    font-weight: bold;
+    border-radius: 50%;
+    text-align: center;
+    margin-left: -10px;
+    vertical-align: center;
+}
+
 /*Other colors to consider #C0B283 #DCD0C0 #F4F4F4 #373737*/
