--- a/app/src/cart.css
+++ b/app/src/cart.css
@@ -4,7 +4,7 @@
 	margin-top: 100px;
 }
 
-.container {
+.cart-container {
 	background-color: white;
 	margin: 25px;
 	padding: 15px;
@@ -12,6 +12,19 @@
 
 .cart {
 	flex-grow: 2;
+}
+
+.checkout-details-label {
+	font-weight: bold;
+	width: 150px;
+	display: inline-block;
+	margin-bottom: 0px;
+	margin-top: 5px;
+}
+
+.checkout-price-value {
+	font-weight: normal;
+	font-size: 20px;
 }
 
 .cart-piece {
@@ -87,9 +100,4 @@
 
 .value {
 	font-size: 24px;
-
-}
-
-.checkout-details {
-	flex-grow: 1;
 }
