--- a/app/src/cart.css
+++ b/app/src/cart.css
@@ -7,16 +7,19 @@
 .cart-container {
 	background-color: white;
 	margin: 25px;
+	margin-bottom: 0px;
 	padding: 15px;
+	padding-bottom: 0px;
+	height: 100%;
 }
 
 .cart-large {
 	width: 66%;
 }
 
-.cart-small {
+/*.cart-small {
 	width: 34%;
-}
+}*/
 
 .checkout-details-small {
 	width: 34%;
@@ -55,11 +58,13 @@
 }
 
 .piece-image-large {
-	width: 25vw;
+	width: 15vw;
+	height: 15vw;
 }
 
 .piece-image-small {
 	width: 10vw;
+	height: 10vw;
 }
 
 .cart-details-container {
@@ -131,20 +136,19 @@
 	margin: 5px;
 	padding-left: 60px;
 	display: flex;
-	flex-direction: row;
-}
-
-.checkout-step-container-active {
+	flex-direction: column;
 	align-items: flex-start;
-}
-
-.checkout-step-container-inactive {
-	
 }
 
 .checkout-step-container-inactive:hover {
 	background-color: #3e607969;
 	cursor: pointer;
+}
+
+.checkout-step-label-container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
 
 .checkout-step-number-container {
@@ -167,4 +171,8 @@
 	font-family: none;
 	font-weight: bold;
 	font-size: 25px;
+}
+
+.checkout-step-form-container {
+	margin-top: 15px;
 }
