--- a/app/src/cart.css
+++ b/app/src/cart.css
@@ -17,6 +17,7 @@
 }
 
 .checkout-details-small {
+	font-family: 'Italianno', cursive;
 	width: 34%;
 }
 
@@ -38,6 +39,15 @@
 .checkout-price-value {
 	font-weight: normal;
 	font-size: 20px;
+}
+
+.checkout-shipping-estimate {
+	color: blue;
+}
+
+.checkout-shipping-estimate:hover {
+	opacity: 0.5;
+	cursor: pointer;
 }
 
 .cart-piece {
@@ -62,6 +72,7 @@
 }
 
 .cart-details-container {
+	font-family: 'Italianno', cursive;
 	width: 50%;
 }
 
@@ -94,8 +105,6 @@
 	justify-content: space-between;
 	height: 125px;
 }
-
-.
 
 .cart-item-message {
 	margin: 5px;
