--- a/app/src/index.css
+++ b/app/src/index.css
@@ -8,7 +8,7 @@ body {
 	background-color: #F4F4F4;
 	padding: 0;
 	margin: 0;
-	font-family: 'Italianno', cursive;
+	/*font-family: 'Italianno', cursive;*/
 }
 
 .navbar-parent {
@@ -18,6 +18,7 @@ body {
 	margin: auto;
 	width: 100%;
 	z-index: 2;
+	font-family: 'Italianno', cursive;
 }
 
 .navbar {
