--- a/app/src/piece.css
+++ b/app/src/piece.css
@@ -78,6 +78,7 @@
 }
 
 .content {
+	font-family: 'Italianno', cursive;
 	background-color: white;
   	box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
   	box-sizing: border-box;
