--- a/app/src/cart.css
+++ b/app/src/cart.css
@@ -199,6 +199,8 @@
 }
 
 .finalize-payment-payment-container {
+	display: flex;
+	flex-direction: column;
 	margin-top: 50px;
 	height: 200px;
 }
@@ -218,6 +220,20 @@
 	font-weight: bold;
 	font-size: 16px;
 	margin-bottom: 5px;
+}
+
+.shipping-rate-container {
+	margin-bottom: 15px;
+}
+
+.shipping-rate-radio {
+	width: 25px;
+}
+
+.shipping-rate-details {
+	margin-top: 7px;
+	margin-left: 40px;
+	color: green;
 }
 
 .payment-details-details-container {
