--- a/app/src/cart.css
+++ b/app/src/cart.css
@@ -41,11 +41,11 @@
 	font-size: 20px;
 }
 
-.checkout-shipping-estimate {
+.checkout-estimate {
 	color: blue;
 }
 
-.checkout-shipping-estimate:hover {
+.checkout-estimate:hover {
 	opacity: 0.5;
 	cursor: pointer;
 }
