--- a/app/src/index.css
+++ b/app/src/index.css
@@ -8,6 +8,7 @@ body {
 	background-color: #F4F4F4;
 	padding: 0;
 	margin: 0;
+	padding-top: 67px;
 	/*font-family: 'Italianno', cursive;*/
 }
 
@@ -51,7 +52,7 @@ h1 {
 	align-items: center;
 	height: 40px;
 	width: 150px;
-	margin-left: 40px;
+	margin-left: 10px;
 	color: white;
 	font-size: 25px;
 	font-weight: bold;
@@ -60,11 +61,14 @@ h1 {
 
 .navbar-item:hover {
 	color: #3e6079;
+	cursor: pointer;
 }
 
 .dropdown-items {
 	display: none;
 	position: absolute;
+	right: 0px;
+	top: 50px;
 	background-color: white;
 	min-width: 250px;
 	z-index: 1;
@@ -72,7 +76,12 @@ h1 {
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.navbar-item:hover .dropdown-items {
+.navbar-item:hover + .dropdown-items {
+	display: flex;
+	flex-direction: column;
+}
+
+.dropdown-items:hover {
 	display: flex;
 	flex-direction: column;
 }
