--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,120 +1,121 @@
-@import url('https://fonts.googleapis.com/css?family=Italianno&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Italianno&display=swap");
 
-html, body {
-	height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-	background-color: #F4F4F4;
-	padding: 0;
-	margin: 0;
-	padding-top: 67px;
-	/*font-family: 'Italianno', cursive;*/
+  background-color: #f4f4f4;
+  padding: 0;
+  margin: 0;
+  padding-top: 67px;
+  /*font-family: 'Italianno', cursive;*/
 }
 
 .navbar-parent {
-	position: fixed;
-	top: 0;
-	left: 0;
-	margin: auto;
-	width: 100%;
-	z-index: 2;
-	font-family: 'Italianno', cursive;
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: auto;
+  width: 100%;
+  z-index: 2;
+  font-family: "Italianno", cursive;
 }
 
 .navbar {
-	background: #262627;
-	display: flex;
-	padding: 10px 20px;
-	justify-content: space-between;
+  background: #262627;
+  display: flex;
+  padding: 10px 20px;
+  justify-content: space-between;
 }
 
 h1 {
-	color: #a57d37;	
-	margin: 0;
-	padding: 0;
+  color: #a57d37;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar-right {
-	display: flex;
-	flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .navbar-home {
-	font-size: 37px;
-	font-weight: bold;
-	color: white;
-	text-decoration: none;
+  font-size: 37px;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
 }
 
 .navbar-item {
-	display: flex;
-	align-items: center;
-	height: 40px;
-	width: 150px;
-	margin-left: 10px;
-	color: white;
-	font-size: 25px;
-	font-weight: bold;
-	text-decoration: none;	
+  display: flex;
+  align-items: center;
+  height: 40px;
+  width: 150px;
+  margin-left: 10px;
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .navbar-item:hover {
-	color: #3e6079;
-	cursor: pointer;
+  color: #3e6079;
+  cursor: pointer;
 }
 
 .dropdown-items {
-	display: none;
-	position: absolute;
-	right: 0px;
-	top: 50px;
-	background-color: white;
-	min-width: 250px;
-	z-index: 1;
-	background-color: #F4F4F4;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  display: none;
+  position: absolute;
+  right: 0px;
+  top: 50px;
+  background-color: white;
+  min-width: 250px;
+  z-index: 1;
+  background-color: #f4f4f4;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 .navbar-item:hover + .dropdown-items {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .dropdown-items:hover {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .dropdown-item {
-	text-decoration: none;
-	color: #284e64;
-	margin-left: 10px;
-	font-size: 15px;
-	font-weight: normal;
-	padding: 2px;
-	font-family: bold;
+  text-decoration: none;
+  color: #284e64;
+  margin-left: 10px;
+  font-size: 15px;
+  font-weight: normal;
+  padding: 2px;
+  font-family: bold;
 }
 
 .dropdown-item:hover {
-	opacity: 0.5;
+  opacity: 0.5;
 }
 
 .cart-svg {
-	color: white;
-	margin-left: 0px;
+  color: white;
+  margin-left: 0px;
 }
 
 .lbl-cart-count {
-    height: 20px;
-    width: 20px;
-    background-color: #3e6079;
-    color: white;
-    font-weight: bold;
-    border-radius: 50%;
-    text-align: center;
-    margin-left: -10px;
-    vertical-align: center;
+  height: 20px;
+  width: 20px;
+  background-color: #3e6079;
+  color: white;
+  font-weight: bold;
+  border-radius: 50%;
+  text-align: center;
+  margin-left: -10px;
+  vertical-align: center;
 }
 
 /*Other colors to consider #C0B283 #DCD0C0 #F4F4F4 #373737*/
