--- a/app/src/piece.css
+++ b/app/src/piece.css
@@ -1,105 +1,107 @@
 #parent-container {
-	height: 100%;
+  height: 100%;
 }
 
 .piece-component-container {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: flex-start;
-	height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  height: 100%;
 }
 
 .piece-container {
-	background-image: url('/white_wall.png');
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	margin: 0 auto;
-	width: 75%;
-	height: 100%;
+  background-image: url("/white_wall.png");
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 75%;
+  height: 100%;
 }
 
 .carousel-container {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	width: 40vw;
-	height: 40vh;	
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 40vw;
+  height: 40vh;
 }
 
 .counter-button {
-	flex-grow: 1;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 5px;
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
 }
 
 .counter-button:hover {
-	opacity: 0.4;
+  opacity: 0.4;
 }
 
 .carousel-image-container {
-	flex-grow: 10;
+  flex-grow: 10;
 }
 
 .current-image {
-	box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: flex-end;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25) inset,
+    0 5px 10px 5px rgba(0, 0, 0, 0.25);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .image-indicators {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .indicator {
-	padding: 3px;
-	position: relative;
-	margin-top: 5px;
-	left: ;
-	z-index: 3
+  padding: 3px;
+  position: relative;
+  margin-top: 5px;
+  left: ;
+  z-index: 3;
 }
 
 .active {
-	color: #5ea5d0;
+  color: #5ea5d0;
 }
 
 .hidden {
-	visibility: hidden; ;
+  visibility: hidden;
 }
 
 .content {
-	font-family: 'Italianno', cursive;
-	background-color: white;
-  	box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
-  	box-sizing: border-box;
-  	display:inline-block;
-  	margin: 5vh 3vw;
-  	padding: 2px;
-  	border: 0.7vmin ridge #b7950e;
-  	border-bottom-color: #b7950fbd;
-  	border-left-color: #b7950fe0;
-  	border-right-color: #b7950fe0;
-  	position:relative;
-  	text-align:center;
-  	width: 30%;
+  font-family: "Italianno", cursive;
+  background-color: white;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25) inset,
+    0 5px 10px 5px rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  display: inline-block;
+  margin: 5vh 3vw;
+  padding: 2px;
+  border: 0.7vmin ridge #b7950e;
+  border-bottom-color: #b7950fbd;
+  border-left-color: #b7950fe0;
+  border-right-color: #b7950fe0;
+  position: relative;
+  text-align: center;
+  width: 30%;
 }
 
 .artist-label {
-	font-family: sans-serif;
-	margin: 0;
-	font-size: 11px;
-	font-weight: normal;
+  font-family: sans-serif;
+  margin: 0;
+  font-size: 11px;
+  font-weight: normal;
 }
 
 .description {
-	font-size: 8px;
+  font-size: 8px;
 }
